# Werim

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: WR.ipynb  WR.py
src/werim/: __init__.py  _common.py  _functions.py  _log.py  dataset.py  meteo.py  preprocess.py  principal_components.py  weather_regimes.py
